2004-11-03  Christophe Fergeau  <teuf@gnome.org>

	* src/totem-pl-parser.c: (my_gnome_vfs_get_mime_type_with_data),
	(totem_pl_parser_parse_internal):
	* src/totem-preferences.c: (totem_setup_preferences): leak fixes

2004-11-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/Makefile.am:
	* src/bacon-video-widget-gst.c: (state_change),
	(bacon_video_widget_get_current_frame), (bacon_video_widget_new):
	* src/gststreaminfo.h:
	  Remove gststreaminfo.h, use GObject properties instead.

2004-11-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-private.h:
	* src/totem.c: (update_seekable), (on_skip_to1_activate):
	when Skip to... is grayed out, "S" shouldn't bring up the skip
	to dialog (Closes: #157031)

2004-10-31  Bastien Nocera  <hadess@hadess.net>

	* src/scrsaver.c: (totem_scrsaver_class_init),
	(totem_scrsaver_new), (fake_event), (totem_scrsaver_init),
	(totem_scrsaver_disable), (totem_scrsaver_enable),
	(totem_scrsaver_finalize):
	* src/scrsaver.h:
	* src/totem-pl-parser.h:
	* src/totem-private.h:
	* src/totem.c: (totem_action_fullscreen_toggle),
	(video_widget_create): turn the ScreenSaver struct into the
	TotemScrsaver GObject

2004-10-31  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (treeview_row_changed): when double-clicking
	we need to to reactivate the drop target after the row activation so
	that drag'n'drop works again (Closes: #155702)

2004-10-30  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_init),
	(setup_config): move the debug before xine_init() so that we can
	debug the plugins loading for example

2004-10-28  Bastien Nocera  <hadess@hadess.net>

	* data/totem.desktop.in.in: tell the mime DB we support URLs

2004-10-28  Bastien Nocera  <hadess@hadess.net>

	* src/totem-disc.c: (cd_cache_disc_is_cdda): sometimes, CD drives
	don't implement getting the CD type (should fix #156679)

2004-10-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
